"""Agent management route handlers."""

from fastapi import APIRouter, HTTPException
from ..models import ListAgentsResponse, Agent

router = APIRouter()


@router.get("/", response_model=ListAgentsResponse, summary="List Agents")
async def list_agents() -> ListAgentsResponse:
    """List all available agents."""
    # Placeholder implementation
    return ListAgentsResponse(
        agents=[],
        total_count=0
    )


@router.post("/message", summary="Send Message to Agent")
async def send_message_to_agent(request_data: dict) -> dict:
    """Send a message to an agent and get a response."""
    # Placeholder implementation
    raise HTTPException(status_code=501, detail="Not implemented - requires gRPC client integration")


@router.get("/{agent_id}/status", summary="Get Agent Status")
async def get_agent_status(agent_id: str) -> dict:
    """Get the status of a specific agent."""
    # Placeholder implementation
    raise HTTPException(status_code=501, detail="Not implemented - requires gRPC client integration") 