"""Task orchestration route handlers."""

from fastapi import APIRouter, HTTPException

router = APIRouter()


@router.post("/execute", summary="Execute Task")
async def execute_task(request_data: dict) -> dict:
    """Execute a task across multiple agents."""
    # Placeholder implementation
    raise HTTPException(status_code=501, detail="Not implemented - requires gRPC client integration")


@router.get("/{task_id}/status", summary="Get Task Status")
async def get_task_status(task_id: str) -> dict:
    """Get the status of a specific task."""
    # Placeholder implementation
    raise HTTPException(status_code=501, detail="Not implemented - requires gRPC client integration")


@router.post("/{task_id}/cancel", summary="Cancel Task")
async def cancel_task(task_id: str) -> dict:
    """Cancel a running task."""
    # Placeholder implementation
    raise HTTPException(status_code=501, detail="Not implemented - requires gRPC client integration") 